use java11 built-in #isBlank.