@@ -1,6 +1,5 @@
 package verifydb;
 
-import org.apache.commons.lang3.StringUtils;
 
 public class ENVConfig {
     private String DBHost;
@@ -65,7 +64,7 @@ public class ENVConfig {
 
         public Builder setDBHost(String dbHostKey) {
             String dbHostVal = System.getenv(dbHostKey);
-            if (StringUtils.isBlank(dbHostVal)) {
+            if (dbHostVal.isBlank()) {
                 System.out.println(String.format("Use default DEFAULT_DB_HOST=%s", this.DBHost));
             } else {
                 this.DBHost = dbHostVal;
@@ -75,7 +74,7 @@ public class ENVConfig {
 
         public Builder setPort(String dbPortKey) {
             String portVal = System.getenv(dbPortKey);
-            if (StringUtils.isBlank(portVal)) {
+            if (portVal.isBlank()) {
                 System.out.println(String.format("Use default DEFAULT_DB_PORT=%d", this.port));
             } else {
                 this.port = Integer.parseInt(portVal);
@@ -85,7 +84,7 @@ public class ENVConfig {
 
         public Builder setUser(String userKey) {
             String userVal = System.getenv(userKey);
-            if (StringUtils.isBlank(userVal)) {
+            if (userVal.isBlank()) {
                 System.out.println(String.format("Use default DEFAULT_CONN_USER=%s", this.user));
             } else {
                 this.user = userVal;
@@ -95,7 +94,7 @@ public class ENVConfig {
 
         public Builder setPass(String passKey) {
             String passVal = System.getenv(passKey);
-            if (StringUtils.isBlank(passVal)) {
+            if (passVal.isBlank()) {
                 System.out.println(String.format("Use default DEFAULT_CONN_PASS=%s", this.pass));
             } else {
                 this.pass = passVal;
@@ -105,7 +104,7 @@ public class ENVConfig {
 
         public Builder setDBName(String dbNameKey) {
             String dbNameVal = System.getenv(dbNameKey);
-            if (StringUtils.isBlank(dbNameVal)) {
+            if (dbNameVal.isBlank()) {
                 System.out.println(String.format("Use default DEFAULT_DB_NAME=%s", this.DBName));
             } else {
                 this.DBName = dbNameVal;
@@ -115,7 +114,7 @@ public class ENVConfig {
 
         public Builder setDBTestTable(String dbTableKey) {
             String dbTestTableVal = System.getenv(dbTableKey);
-            if (StringUtils.isBlank(dbTestTableVal)) {
+            if (dbTestTableVal.isBlank()) {
                 System.out.println(String.format("Use default DEFAULT_DB_TEST_TABLE=%s", this.DBTestTable));
             } else {
                 this.DBTestTable = dbTestTableVal;
